# claude-skills

./: .gitignore  .shellcheckrc  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml  tmux-skill-improvements.md
.claude-plugin/: marketplace.json
changelogs/: README.md  conventional-commits.md  fzf.md  git-absorb.md  git-chain.md  jj.md  skill-creator.md  skill-reviewer.md  tmux.md  ultrathink.md
notes/: README.md
notes/tmux/: README.md  lifecycle-architecture.md  lifecycle-quick-reference.md  multiline-support-analysis.md
plugins/conventional-commits/: SKILL.md
plugins/conventional-commits/references/: full-spec.md
plugins/fzf/: SKILL.md
plugins/fzf/references/: actions.md  integrations.md  options.md
plugins/git-absorb/: SKILL.md
plugins/git-chain/references/: chain-management.md  merge-options.md  rebase-options.md
plugins/jj/: SKILL.md
plugins/jj/references/: commands.md  configuration.md  git-comparison.md  revsets.md
plugins/skill-reviewer/: LICENSE.txt  SKILL.md
plugins/skill-reviewer/references/: common-pitfalls.md  examples.md  mental-model-shift.md  (+2 more)
plugins/tmux/: SKILL.md
plugins/ultrathink/: SKILL.md
schemas/: marketplace-schema.json  plugin-schema.json  skill-frontmatter-schema.json
scripts/validators/: validate_all.py  validate_json.py  validate_structure.py  validate_yaml.py
tests/bash/: test-cleanup-sessions.sh  test-create-session.sh  test-find-sessions.sh  test-kill-session.sh  test-list-sessions.sh  test-pane-health.sh  test-registry.sh  test-safe-send.sh  test-session-integration.sh  test-wait-for-text.sh
(+8 files in other folders)
